@@ -16,6 +16,12 @@ sleep by this feature requires careful preparation.  Enabling sleep, a
 board with no RESET pin cannot be debugged by JTAG/SWD.  Setting of
 DBGMCU_CR (0xE0042004) is required beforehand (default is zero).
 
+** API change: chopstx_poll
+This is a kind of clarification.  The third argument is now an array
+of constant pointers.  We don't touch the array itself, just use it.
+This allows having the array in read-only memory and can contribute
+less use of RAM.
+
 ** USB API changes
 INTR_REQ_USB is now defined by usb_lld.h.  Enumeration type of
 DEVICE_STATE now has USB_DEVICE_STATE_ prefix.
